# Vjudge

./: .gitignore  AMatchMakingProblem.cpp  Anagrams.cpp  Back to the 8-Queens .cpp  BadCode.cpp  Bars.cpp  CMakeLists.txt  ClockHands.cpp  Division.cpp  DynamicFrog.cpp  EletricBill.cpp  ExactChange.cpp  GasStations.cpp  HelpingFillGates.cpp  InternalRateOfReturn.cpp  MaximumSumII.cpp  Murcia's Skyline.cpp  README.md  Rock-Paper-ScissorsTournament.cpp  SocialConstraints.cpp  SolveIt.cpp  TheDominancesSolitare.cpp  TheTrip2007.cpp  WhatIsTheCard.cpp  rmapa.cpp
CodeWars/src/: StringToCamelCase.java
Colorindo/: colorindo  colorindo.cpp
CopaDoMundo/: a.out  copa.cpp
DataStructures/Grafo/: digrafo  digrafo.cpp  main
DataStructures/Grafos/: graph.cpp
Duende/: duende  duende.cpp
Energia/: energia.cpp
FamiliaReal/: main  main.cpp
Fissura/: fissura  fissura.cpp
FreteFamiliaSilva/: frete  frete.cpp
OBI/: colorindo.cpp  copa.cpp  fissura  fissura.cpp  frete.cpp  onibus.cpp  troia.cpp
Onibus/: onibus.cpp
UVA/: Babel.cpp  BarCodes.cpp  Bars.cpp  CopsandRobbers.cpp  DaVinciCode.cpp  DetermineIt.cpp  Dominator.cpp  Eliminating Ballons.cpp  Factovirstors.cpp  Fill the Containers.cpp  Frogger.cpp  GeneticSearch.cpp  Grapevine.cpp  IrreducableBasicFractions.cpp  LCS.cpp  Marbles.cpp  MiceandMaze.cpp  ModularFibonacci.cpp  OceanDeep!Makeitshallow!!.cpp  PowerStrings.cpp  PseudoRandomNumbers.cpp  ScareCrow.cpp  ScrollingProblem.cpp  SocialConstraints.cpp  TheBusDriverProblem.cpp  TheMarriageInterview.cpp  TwinPrimes.cpp  Wormholes.cpp  a.out  input.txt
(+10 files in other folders)
